# codex-swear-meter

./: .gitignore  README.md  pyproject.toml
skills/codex-swear-meter/: SKILL.md
skills/codex-swear-meter/agents/: openai.yaml
skills/codex-swear-meter/assets/: negative_terms.json  positive_terms.json  swear_index_terms.json
skills/codex-swear-meter/references/: adaptation.md
skills/codex-swear-meter/scripts/: codex_swear_meter.py
src/codex_log_tone_audit/: __init__.py  __main__.py  audit.py
src/codex_log_tone_audit/assets/: spice_terms.json
tests/: test_audit.py
