[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-log-tone-audit"
version = "0.1.0"
description = "Local Codex log audit for swear-index and frustration timeline charts."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Peter" }]
dependencies = []
keywords = ["codex", "logs", "privacy", "sentiment", "chart"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/petergpt/codex-swear-meter"
Repository = "https://github.com/petergpt/codex-swear-meter"
Issues = "https://github.com/petergpt/codex-swear-meter/issues"

[project.scripts]
codex-log-tone-audit = "codex_log_tone_audit.__main__:main"
codex-swear-meter = "codex_log_tone_audit.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
codex_log_tone_audit = ["assets/*.json", "assets/*.png"]

[tool.ruff]
line-length = 100
target-version = "py310"
